# python-package-template

./: README.md  pyproject.toml
.github/workflows/: publish-rc.yml  publish.yml
