[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "<package name>"
version = "<version>"
description = "<description>"
license = "Apache-2.0"
authors = ["Jens Keiner <jens.keiner@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jenskeiner/<repository name>/"
repository = "https://github.com/jenskeiner/<repository name>/"
documentation = "https://github.com/jenskeiner/<repository name>/tree/main/docs/"
keywords = ["keywords..."]
classifiers = [
	"Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
packages = [{include = "<package name>"}]

[tool.poetry.dependencies]
python = "~=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "~=7.2.1"
